<resources>

    <string name="locale">en</string>
    <string name="app_link" translatable="false"></string>
    <string name="empty" translatable="false" />
    <string name="item_name">Item Name</string>
    <string name="list_title">List name</string>
    <string name="delete_list_forever_warning">This will delete the list and all the items it contains. Are you sure you want to delete this list ? (this can\'t be undone)</string>
    <string name="list_default_name">My List</string>
    <string name="cancel">Cancel</string>
    <string name="validate">Validate</string>
    <string name="warning">Warning</string>
    <string name="clear_list">Just clear list</string>
    <string name="expand_item">Expand Item</string>
    <string name="delete_list">Delete List</string>
    <string name="edit_list">Edit List</string>
    <string name="add_list">Add List</string>
    <string name="add">Add</string>
    <string name="clear_comment">Clear comment</string>
    <string name="add_comment">Add comment</string>
    <string name="change_list_location">Change list storage folder</string>
    <string name="app_private_storage">App private storage</string>
    <string name="choose_folder">Choose folder …</string>
    <string name="more_options">more options</string>
    <string name="import_from_file">Import</string>
    <string name="warning_new_file">⚠ New file created for this list, you might want to delete the former one manually.</string>
    <string name="list_created_with_one1ist">List created .</string>
    <string name="settings">Settings</string>
    <string name="list_added">The list %s has been added to your lists !</string>
    <string name="list_copied">The list %s has been copied into your lists !</string>
    <string name="list_already_in_your_lists">This list is already in your lists.</string>
    <string name="error_opening_file">Error while opening list file.</string>
    <string name="error_opening_filepath">Error while getting your list from %s. Displaying cached one instead.</string>
    <string name="error_saving_to_path">Error while saving your list to %s</string>
    <string name="file_deleted">File deleted.</string>
    <string name="error_deleting_list_file">Error while deleting list file.</string>
    <string name="also_delete_file">Also delete file on the filesystem</string>
    <string name="show_menu">Show menu</string>
    <string name="storage">Storage</string>
    <string name="about">About</string>
    <string name="app_version">App Version</string>
    <string name="default_storage_folder">Default storage folder</string>
    <string name="help">Help</string>
    <string name="changeFolderHelp">Concurrent modifications of files are not properly handled in 1List. New content will overwrite the file. Be sure you refresh your list before editing it if you are using a shared file. (Pull the list down to refresh it)</string>
    <string name="not_a_1list_file">The selected file is not a .inlist file.</string>
    <string name="ok_with_tick">✓ OK</string>
    <string name="storage_chooser_select_label">Select</string>
    <string name="storage_chooser_create_label">Create</string>
    <string name="storage_chooser_new_folder_label">New Folder</string>
    <string name="storage_chooser_cancel_label">Cancel</string>
    <string name="storage_chooser_overview_heading">Storage Devices</string>
    <string name="storage_chooser_internal_storage_text">Internal Storage</string>
    <string name="storage_chooser_free_space_text">%s free</string>
    <string name="storage_chooser_folder_created_toast_text">Folder Created</string>
    <string name="storage_chooser_folder_error_toast_text">Error occurred while creating folder. Try again.</string>
    <string name="storage_chooser_text_field_hint_text">Folder Name</string>
    <string name="storage_chooser_text_field_error_text">Empty Folder Name</string>
    <string name="tuto">Tutorial</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="Log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="need_account">Don\'t have account ?</string>
    <string name="have_account">Already have account ?</string>
    <string name="Add_Tasks">Add Tasks</string>
    <string name="Log_out">Log out</string>
    <string name="Choose_language">Choose Language</string>
    <string name="lets_start">Let\'s get started !</string>
    <string name="please_enter_Email">please enter Email</string>
    <string name="please_enter_password">please enter password</string>
    <string name="Login_failed">Login failed.</string>
    <string name="Sign_up_failed">Sign up failed , Try again Later !</string>

    <string name="click_to_add_list"> Click on top right + to add a list </string>
    <string name="switch_lists">Switch lists by clicking on them </string>
    <string name="show_lists_option">Long click a list to move it or show its options (edit / delete)</string>
    <string name="add_an_item">Add an item to the selected list with the top "Add" text box</string>
    <string name="swipe_to_delete"> Swipe an item left to delete it </string>
    <string name="swipe_to_edit">Swipe an item right to edit it</string>
    <string name="mark_as_done">Mark item as done simply by clicking on it And as undone by clicking on it again ! </string>
    <string name="quickly_add_a_comment">💡 Quickly add a comment by clicking the "⌄" button appearing under the "Add" edit box when you start typing !</string>
    <string name="show_an_item_comments">Show an item comments by clicking on the "⌄" button at the end of the line ---> </string>


    <string name="enjoy"> Enjoy the app ! 😃 100% FREE / 0 ads ! </string>
    <string name="external_folder_title">Save your lists in an external folder</string>
    <string name="external_folder_content">From the list edition window, under the \'more options\' button.</string>
    <string name="import_title">Import external lists</string>
    <string name="import_content">From the list creation window, under the \'more options\' button.</string>
    <string name="pull_title">Pull to refresh</string>
    <string name="pull_content">Pull the content of your list down to refresh it in case the file has been updated by someone else elsewhere.</string>
    <string name="settings_title">Settings screen</string>
    <string name="settings_content">Click the "⌄" button the top of the screen to access the settings.</string>
    <string name="share_title">Share your liststhe list has</string>
    <string name="share_content">Click the share icon to share your list as text with someone else.</string>
    <string name="see_again_in_settings">You can see this note again from the settings screen.</string>
    <string name="continue_button">Continue</string>
</resources>
